--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "decog-framework",
+  "name": "@bff/signals",
   "version": "1.0.0",
-  "description": "Browser Fingerprinting Framework in addition to bots and Ad blocking detection.",
-  "main": "lib/decog.js",
+  "type": "module",
+  "description": "Browser Fingerprinting Framework: Your browser's BFF",
+  "main": "dist/index.cjs",
   "directories": {
     "lib": "lib"
   },
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "release": "npm publish --access public"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0x48piraj/decog-framework.git"
+    "url": "git+https://github.com/0x48piraj/BF-F.git"
   },
   "keywords": [
     "javascript",
@@ -25,7 +39,11 @@
   "author": "Piyush Raj",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/0x48piraj/decog-framework/issues"
+    "url": "https://github.com/0x48piraj/BF-F/issues"
   },
-  "homepage": "https://github.com/0x48piraj/decog-framework#readme"
+  "homepage": "https://github.com/0x48piraj/BF-F#readme",
+  "devDependencies": {
+    "tsup": "6.5.0",
+    "typescript": "4.9.4"
+  }
 }
