--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@bff/*": ["*"]
+    },
     "target": "ES2018",
     "module": "ESNext",
     "lib": ["DOM", "ES2015", "ES2018"],
